--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 <!--  Essential META Tags -->
 
-<meta property="og:title" content="fccTempLate">
+<meta property="og:title" content="fccCookBook">
 <meta property="og:type" content="website" />
 <meta property="og:description" content="Template for FreeCodeCamp.com React Projects with FontAwesome and Analytics.">
-<!-- <meta property="og:image" content="https://raw.githubusercontent.com/TurtleWolfe/fccTempLate/master/src/images/metaPreview.png"> -->
-<meta property="og:image" content="https://raw.githubusercontent.com/TurtleWolfe/fccTempLate/master/src/images/metaFAvertical.png">
-<meta property="og:url" content="https://turtlewolfe.github.io/fccTempLate/">
+<!-- <meta property="og:image" content="https://raw.githubusercontent.com/TurtleWolfe/fccCookBook/master/src/images/metaPreview.png"> -->
+<meta property="og:image" content="https://raw.githubusercontent.com/TurtleWolfe/fccCookBook/master/src/images/metaFAvertical.png">
+<meta property="og:url" content="https://turtlewolfe.github.io/fccCookBook/">
 <meta name="twitter:card" content="summary_large_image">
 
 <!--  Non-Essential, But Recommended -->
@@ -51,7 +51,7 @@
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
     crossorigin="anonymous"
   />
-    <title>fccTempLate</title>
+    <title>fccCookBook</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
